Implemented micro-affinity-groups endpoint
